--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://Mohammedshoaib2187.github.io/"
+  "homepage": "https://Mohammedshoaib2187.github.io/Portfolio"
 
 
 }
